# seqalign

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/: dependabot.yml
benches/: seqalign.rs
src/: dynprog.rs  lib.rs  measures.rs  op.rs  ops.rs
src/op/: archetype.rs  mod.rs
