[package]
name = "seqalign"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Sequence alignment using edit operations"
documentation = "https://docs.rs/seqalign/"
homepage = "https://github.com/sfb833-a3/seqalign"
repository = "https://github.com/sfb833-a3/seqalign"
license = "Apache-2.0"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "NOTICE",
    "README.md"
]

[dependencies]

[dev-dependencies]
lazy_static = "1.0"
