[package]
name = "seqalign"
version = "0.2.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Sequence alignment using edit operations"
documentation = "https://docs.rs/seqalign/"
homepage = "https://github.com/sfb833-a3/seqalign"
repository = "https://github.com/sfb833-a3/seqalign"
license = "Apache-2.0"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "NOTICE",
    "README.md"
]

[dependencies]

[dev-dependencies]
lazy_static = "1"
maplit = "1"
pretty_assertions = "0.5"
rand = "0.4"
